Fixed context menu is not visible when the table height is smaller than the menu height (fixes #195)

--- a/public/css/grocy.css
+++ b/public/css/grocy.css
@@ -199,6 +199,10 @@ td {
 	display: none;
 }
 
+.dataTables_scrollBody {
+	overflow: visible !important;
+}
+
 /* Third party component customizations - toastr */
 #toast-container > div {
 	opacity: 1;
